--- a/frontend/css/app_button.css
+++ b/frontend/css/app_button.css
@@ -8,7 +8,9 @@
   outline: 0;
   padding: 0;
   text-transform: uppercase;
-  transition: transform 0.1s ease-in, background-color 0.1s ease-in;
+  transition: transform 0.1s ease-out,
+              background-color 0.1s ease-out,
+              filter 0.1s ease-out;
 }
 
 .app_button:active {
@@ -48,9 +50,13 @@
 .app_button > .app_button_hint {
   height: 0;
   overflow: hidden;
-  transition: height 0.1s ease-in 0.5s;
+  transition: height 0.1s ease-out 0.5s;
 }
 
 .app_button:active > .app_button_hint {
   height: 40px;
+}
+
+.app_button:disabled {
+  filter: opacity(80%);
 }
