--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -3,6 +3,17 @@
   overflow: hidden;
   position: fixed;
   top: 0;
-  transition: transform 0.3s ease-out, filter 0.3s ease-out;
+  width: 100%;
+}
+
+.app > .app_container {
+  height: 100%;
+  width: 100%;
+}
+
+.app > .app_progress_bar {
+  height: 5px;
+  position: fixed;
+  top: 0;
   width: 100%;
 }
