--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -11,9 +11,27 @@
   width: 100%;
 }
 
-.app > .app_progress_bar {
+.app .app_progress_bar {
   height: 5px;
   position: fixed;
   top: 0;
   width: 100%;
+}
+
+.app .app_progress_bar.app_progress_bar-enter {
+  transform: translate(0, -100%);
+}
+
+.app .app_progress_bar.app_progress_bar-enter-active {
+  transform: translate(0, 0);
+  transition: transform 0.3s ease-out;
+}
+
+.app .app_progress_bar.app_progress_bar-leave {
+  transform: translate(0, 0);
+}
+
+.app .app_progress_bar.app_progress_bar-leave-active {
+  transform: translate(0, -100%);
+  transition: transform 0.3s ease-out;
 }
