--- a/frontend/css/progress_bar.css
+++ b/frontend/css/progress_bar.css
@@ -1,12 +1,18 @@
 .progress_bar {
   background-color: #8ce2ec;
+  overflow: hidden;
 }
 
 .progress_bar > .progress_bar_loader {
-  animation: progress_bar_slide 1.5s linear infinite;
   background: linear-gradient(to right, #8ce2ec 0%, #bdeff4 100%);
   height: 100%;
+  opacity: 0;
   width: 30%;
+}
+
+.progress_bar > .progress_bar_loader.progress_bar_mount {
+  animation: progress_bar_slide 1.5s linear infinite;
+  opacity: 1;
 }
 
 .progress_bar.critical {
