Added notification. This completes most of the UI design

--- a/frontend/css/app_button.css
+++ b/frontend/css/app_button.css
@@ -1,7 +1,7 @@
 .app_button {
   border-radius: 0;
   border: 0;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 2em;
   font-weight: lighter;
   margin: 0;
