--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -18,20 +18,30 @@
   width: 100%;
 }
 
-.app .app_progress_bar.app_progress_bar-enter {
+.app .app_notification {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.app .app_progress_bar.app_progress_bar-enter,
+.app .app_notification.app_notification-enter {
   transform: translate(0, -100%);
 }
 
-.app .app_progress_bar.app_progress_bar-enter-active {
+.app .app_progress_bar.app_progress_bar-enter-active,
+.app .app_notification.app_notification-enter-active {
   transform: translate(0, 0);
   transition: transform 0.3s ease-out;
 }
 
-.app .app_progress_bar.app_progress_bar-leave {
+.app .app_progress_bar.app_progress_bar-leave,
+.app .app_notification.app_notification-leave {
   transform: translate(0, 0);
 }
 
-.app .app_progress_bar.app_progress_bar-leave-active {
+.app .app_progress_bar.app_progress_bar-leave-active,
+.app .app_notification.app_notification-leave-active {
   transform: translate(0, -100%);
   transition: transform 0.3s ease-out;
 }
