--- a/frontend/css/responsive_split_container.css
+++ b/frontend/css/responsive_split_container.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
   width: 100%;
 }
 
@@ -35,10 +36,30 @@
     width: 300px;
     display: block;
   }
+
+  .responsive_split_container >
+  .responsive_split_container_inner > *:first-child {
+    border-radius: 20px 20px 0 0;
+  }
+
+  .responsive_split_container >
+  .responsive_split_container_inner > *:last-child {
+    border-radius: 0 0 20px 20px;
+  }
 }
 
 @media only screen and (min-width : 1024px) {
   .responsive_split_container > .responsive_split_container_inner > * {
     float: left;
+  }
+
+  .responsive_split_container >
+  .responsive_split_container_inner > *:first-child {
+    border-radius: 20px 0 0 20px;
+  }
+
+  .responsive_split_container >
+  .responsive_split_container_inner > *:last-child {
+    border-radius: 0 20px 20px 0;
   }
 }
