--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -11,32 +11,32 @@
   width: 100%;
 }
 
-.app .app_progress_bar {
+.app .app_loading_bar {
   height: 5px;
   position: fixed;
   top: 0;
   width: 100%;
 }
 
-.app .app_progress_bar.app_progress_bar-enter {
+.app .app_loading_bar.app_loading_bar-enter {
   transform: translate(0, -100%);
 }
 
-.app .app_progress_bar.app_progress_bar-enter-active {
+.app .app_loading_bar.app_loading_bar-enter-active {
   transform: translate(0, 0);
   transition: transform 0.3s ease-out;
 }
 
-.app .app_progress_bar.app_progress_bar-leave {
+.app .app_loading_bar.app_loading_bar-leave {
   transform: translate(0, 0);
 }
 
-.app .app_progress_bar.app_progress_bar-leave-active {
+.app .app_loading_bar.app_loading_bar-leave-active {
   transform: translate(0, -100%);
   transition: transform 0.3s ease-out;
 }
 
-.app .app_notification_wrapper {
+.app .app_toast_wrapper {
   box-sizing: border-box;
   padding: 16px 16px 0 16px;
   position: fixed;
@@ -44,25 +44,25 @@
   width: 100%;
 }
 
-.app .app_notification_wrapper > .app_notification {
+.app .app_toast_wrapper > .app_toast {
   margin: auto;
   max-width: 800px;
 }
 
-.app .app_notification_wrapper.app_notification-enter {
+.app .app_toast_wrapper.app_toast-enter {
   transform: translate(0, -100%) perspective(1000px) rotate3D(1, 0, 0, 90deg);
 }
 
-.app .app_notification_wrapper.app_notification-enter-active {
+.app .app_toast_wrapper.app_toast-enter-active {
   transform: translate(0, 0) perspective(1000px) rotate3D(0, 0, 0, 90deg);
   transition: transform 0.3s ease-out;
 }
 
-.app .app_notification_wrapper.app_notification-leave {
+.app .app_toast_wrapper.app_toast-leave {
   transform: translate(0, 0) perspective(1000px) rotate3D(0, 0, 0, 90deg);
 }
 
-.app .app_notification_wrapper.app_notification-leave-active {
+.app .app_toast_wrapper.app_toast-leave-active {
   transform: translate(0, -100%) perspective(1000px) rotate3D(1, 0, 0, 90deg);
   transition: transform 0.3s ease-out;
 }
