--- a/frontend/css/loading_bar.css
+++ b/frontend/css/loading_bar.css
@@ -1,10 +1,11 @@
 .loading_bar {
   background-color: #8ce2ec;
   overflow: hidden;
+  transition: background-color 0.3s;
 }
 
 .loading_bar > .loading_bar_loader {
-  background: #bdeff4;
+  background: white;
   height: 100%;
   opacity: 0;
   width: 10%;
@@ -12,15 +13,11 @@
 
 .loading_bar > .loading_bar_loader.loading_bar_mount {
   animation: loading_bar_slide 1.5s ease infinite;
-  opacity: 1;
+  opacity: 0.75;
 }
 
 .loading_bar.critical {
   background-color: #ff9999;
-}
-
-.loading_bar.critical > .loading_bar_loader {
-  background: #ffcccc;
 }
 
 @keyframes loading_bar_slide {
