--- a/frontend/css/toast.css
+++ b/frontend/css/toast.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-radius: 20px;
   display: flex;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
   overflow: hidden;
 }
 
