--- a/frontend/css/body.css
+++ b/frontend/css/body.css
@@ -8,3 +8,8 @@ html, body {
   overflow: hidden;
   padding: 0;
 }
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../static/Roboto/Roboto-Regular.ttf') format('truetype');
+}
